@@ -2,6 +2,7 @@ CHANGELOG Roundcube Webmail
 ===========================
 
 - Disable TinyMCE contextmenu plugin as there are more cons than pros in using it (#1490118)
+- Fix issue where Archive folder wasn't protected in Folder Manager (#1490154)
 - Fix compatibility with PHP 5.2. in rcube_imap_generic (#1490115)
 - Fix setting flags on servers with no PERMANENTFLAGS response (#1490087)
 - Fix regression in SHAA password generation in ldap driver of password plugin (#1490094)
